[gd_scene load_steps=13 format=3 uid="uid://drpiywr0olkpq"]

[ext_resource type="Script" path="res://Scenes/Player/Player.gd" id="1_ktb2n"]
[ext_resource type="Shader" path="res://Scenes/Player/pixelate.gdshader" id="2_8x3vt"]
[ext_resource type="AudioStream" uid="uid://bsmvfvnq0w6v8" path="res://Scenes/Player/horror_chase_loop.wav" id="2_53hbd"]
[ext_resource type="AudioStream" uid="uid://cd174r8h3galt" path="res://Assets/Sounds/Ambiant/the-ambience-room-tone-139064.mp3" id="4_icb43"]
[ext_resource type="AudioStream" uid="uid://7cwlpqkd71dv" path="res://Assets/Sounds/Ambiant/night-ambient-120458.mp3" id="5_dgnyo"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uq044"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_uqjpu"]

[sub_resource type="PlaneMesh" id="PlaneMesh_s7saf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lmkul"]
render_priority = 0
shader = ExtResource("2_8x3vt")

[sub_resource type="Animation" id="Animation_krvw5"]
length = 0.001
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 1, 0)
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 1, 0)
tracks/2/type = "position_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 0, 1.54015, -5.96046e-08)

[sub_resource type="Animation" id="Animation_ds7k6"]
resource_name = "crouch"
length = 0.3
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 1, 0, 0.3, 1, 0, -0.280022, 0)
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 1, 0, 0.3, 1, 0, 0.516718, 0.413345)
tracks/2/type = "position_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 0, 1.54015, -5.96046e-08, 0.3, 1, 0, 0.180096, -5.96046e-08)
tracks/3/type = "rotation_3d"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape3D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 0.3, 1, -0.707107, 0, 0, 0.707107)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_372jt"]
_data = {
"RESET": SubResource("Animation_krvw5"),
"crouch": SubResource("Animation_ds7k6")
}

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0131631, 0)
safe_margin = 0.005
script = ExtResource("1_ktb2n")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_uq044")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_uqjpu")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.54015, -5.96046e-08)
current = true

[node name="Hand" type="MeshInstance3D" parent="Camera"]
transform = Transform3D(0.0977523, 0.0982769, -0.00762619, 0, 0.180861, 0.0932286, 0.021083, -0.455665, 0.0353592, -0.433114, -0.36724, -0.400613)
mesh = SubResource("CapsuleMesh_uqjpu")
skeleton = NodePath("../..")

[node name="UI" type="VBoxContainer" parent="Camera"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.856
anchor_right = 0.5
anchor_bottom = 0.856
offset_left = -80.0
offset_top = -66.0
offset_right = 80.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Camera/UI"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Dialogue" type="Label" parent="Camera/UI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
horizontal_alignment = 1
vertical_alignment = 1

[node name="OmniLight3D" type="OmniLight3D" parent="Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.06871, -0.0361241)
light_energy = 0.15
distance_fade_enabled = true
distance_fade_begin = 2.0
distance_fade_length = 2.0
omni_range = 6.68824

[node name="ShaderMesh" type="MeshInstance3D" parent="Camera"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.453877)
mesh = SubResource("PlaneMesh_s7saf")
surface_material_override/0 = SubResource("ShaderMaterial_lmkul")

[node name="AudioRotationNode" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.02445e-08, 0)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="AudioRotationNode"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.56949)
stream = ExtResource("2_53hbd")
volume_db = -80.0
max_db = -2.0
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_372jt")
}

[node name="InsideAmbiantAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_icb43")
volume_db = -9.007
autoplay = true

[node name="OutsideAmbiantAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_dgnyo")
